# Agri_Market

./: .gitignore  Dockerfile  LICENSE  README.md  agent.py  agrimarket_build_prompt.md  ask.py  env.py  inference.py  main.py  pyproject.toml  requirements.txt  test_env.py  train.py
models/: task1_qlearning_agent.pkl  task2_qlearning_agent.pkl  task3_qlearning_agent.pkl
notebooks/: demo.ipynb
server/: app.py
